--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8"> <!--metadados do html-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--metadados do html-->
     <title>Janice Valente</title> <!--título do html-->
+    <link rel="stylesheet" href="styles.css"> <!--link para o css-->
 </head> <!--fim do cabeçalho do html-->
-<body> <!--corpo do html-->
-    <header> <!--cabeçalho do html-->
-        <h1>Janice Valente</h1> <!--título do html-->
+<body class="body"> <!--corpo do html-->
+    <!--<img  src="background.jpg" alt="arco-íris" class="background">-->
+    <header class="header"> <!--cabeçalho do html-->
+
+        <h1 class="title">Janice Valente</h1> <!--título do html-->
         <p> <!--parágrafo do html-->
         Desevolvedora grão. <!--texto do html-->
         </p> <!--fim do parágrafo do html-->
@@ -28,5 +31,7 @@
             <ul> Estagiária de Desenvolvimento de Sistemas na empresa LA </ul>
         </li>
     </div>
+    
+    <button class="oi"> OI </button>
 </body> <!--fim do corpo do html  -->
 </html> <!--fim do html-->
