--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head> <!--cabeçalho do html-->
     <meta charset="UTF-8"> <!--metadados do html-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--metadados do html-->
-    <title>Janice Valente</title> <!--título do html-->
+    <title>Janice - Curriculo - Figma</title> <!--título do html-->
     <link rel="stylesheet" href="styles.css"> <!--link para o css-->
 </head> <!--fim do cabeçalho do html-->
 <body class="body"> <!--corpo do html-->
-    <!--<img  src="background.jpg" alt="arco-íris" class="background">-->
+    <img  src="background.jpg" alt="arco-íris" class="background" > <!--imagem do html-->
     <header class="header"> <!--cabeçalho do html-->
 
-        <h1 class="title">Janice Valente</h1> <!--título do html-->
-        <p> <!--parágrafo do html-->
-        Desevolvedora grão. <!--texto do html-->
+        <h1 class="titulo">Janice Valente</h1> <!--título do html-->
+        <p class="paragrafo"> <!--parágrafo do html-->
+        Desevolvedora de sistemas. <!--texto do html-->
         </p> <!--fim do parágrafo do html-->
     </header>
 
@@ -32,6 +32,6 @@
         </li>
     </div>
     
-    <button class="oi"> OI </button>
+    
 </body> <!--fim do corpo do html  -->
 </html> <!--fim do html-->
