--- a/index.html
+++ b/index.html
@@ -6,23 +6,33 @@
     <title>Janice - Curriculo - Figma</title> <!--título do html-->
     <link rel="stylesheet" href="styles.css"> <!--link para o css-->
 </head> <!--fim do cabeçalho do html-->
+
 <body class="body"> <!--corpo do html-->
     <img  src="background.jpg" alt="arco-íris" class="background" > <!--imagem do html-->
     <header class="header"> <!--cabeçalho do html-->
-
+        <img class="perfil" src="perfil.png" alt="perfil"> <!--imagem do html-->
+ 
         <h1 class="titulo">Janice Valente</h1> <!--título do html-->
         <p class="paragrafo"> <!--parágrafo do html-->
         Desevolvedora de sistemas. <!--texto do html-->
         </p> <!--fim do parágrafo do html-->
+
     </header>
 
-    <div>   
-        <h1>FORMAÇÃO</h1> 
-        <li> 
-            <ul> Graduação em Licenciatura Matemática </ul>
-            <ul> Estudante de Desenvolvimento de Sistemas </ul>
-        </li>
-    </div>
+    <divFormacao class="formacao"> <!--div do html-->
+        <box1Formacao class="box1Formacao"> <!--div do html-->
+        <img src="school.png" alt="graduação" class="school"> <!--imagem do html-->
+        <h1 class="titulo">Educação</h1>
+        </box1Formacao>
+
+        </textFormacao class="textFormacao"> <!--div do html-->
+        Graduada em Licenciatura em Matemática pela UFV
+Graduanda em Engenharia da Computação pelo CEFET-MG (Campus Timóteo)
+Evangelizadora formada pelo Grupo Espírita da Caridade, Ipatinga
+Crossfiteira e corredora formada pela vida adulta saudável
+Artista plástica formada no ventre
+Formação de mãe em andamento, sem previsão de conclusão        </textFormacao>
+    </divFormacao>
 
     <div>   
         <h1>EXPERIÊNCIAS</h1> 
