--- a/index.html
+++ b/index.html
@@ -12,32 +12,32 @@
     <header class="header"> <!--cabeçalho do html-->
         <img class="perfil" src="perfil.png" alt="perfil"> <!--imagem do html-->
  
-        <h1 class="titulo">Janice Valente</h1> <!--título do html-->
-        <p class="paragrafo"> <!--parágrafo do html-->
+        <h1 class="tituloHeader">Janice Valente</h1> <!--título do html-->
+        <p class="paragrafoHeader"> <!--parágrafo do html-->
         Desevolvedora de sistemas. <!--texto do html-->
         </p> <!--fim do parágrafo do html-->
 
     </header>
     <divConteudo class="conteudo"> <!--div do html-->
     <box1> 
-        <divFormacao class="formacao"> <!--div do html-->
-            <box1Formacao class="box1Formacao"> <!--div do html-->
+        <formacao class="formacao"> <!--div do html-->
+            <tituloFormacao class="tituloFormacao"> <!--div do html-->
             <img src="school.png" alt="graduação" class="school"> <!--imagem do html-->
-            <h1 class="titulo">Educação</h1>
-            </box1Formacao>
+            <h1 class="tituloHeader">Educação</h1>
+            </tituloFormacao>
 
-            <textFormacao class="textFormacao"> <!--div do html-->
-                <p class="paragrafo">Graduada em Licenciatura em Matemática pela UFV</p>
-                <p class="paragrafo">Graduanda em Engenharia da Computação pelo CEFET-MG (Campus Timóteo)</p>
-                <p class="paragrafo">Evangelizadora formada pelo Grupo Espírita da Caridade, Ipatinga</p>
-                <p class="paragrafo">Crossfiteira e corredora formada pela vida adulta saudável</p>
-                <p class="paragrafo">Artista plástica formada no ventre</p>
-                <p class="paragrafo">Formação de mãe em andamento, sem previsão de conclusão    </p>    
-            </textFormacao>
-        </divFormacao>
+            <paragrafoFormacao class="paragrafoFormacao"> <!--div do html-->
+                <p class="pf">Graduada em Licenciatura em Matemática pela UFV</p>
+                <p class="pf">Graduanda em Engenharia da Computação pelo CEFET-MG (Campus Timóteo)</p>
+                <p class="pf">Evangelizadora formada pelo Grupo Espírita da Caridade, Ipatinga</p>
+                <p class="pf">Crossfiteira e corredora formada pela vida adulta saudável</p>
+                <p class="pf">Artista plástica formada no ventre</p>
+                <p class="pf">Formação de mãe em andamento, sem previsão de conclusão    </p>    
+            </paragrafoFormacao>
+        </formacao>
 
         <divConectar class="conectar"> <!--div do html-->
-            <img src="familia.png" alt="conectar" class="familia"> <!--imagem do html-->
+            <img src="familia.png" alt="conectar" class="imgFamilia"> <!--imagem do html-->
             <box1Conectar class="box1Conectar"> <!--div do html-->
                 <textConectar class="textConectar"> <!--div do html-->
                     <p1 class="descricao">Mãe,</p1>    
@@ -54,13 +54,18 @@
     </box1>
     <box2> <!--div do html-->
 
-        <cardRunning class="Running">
-            <textoRunning class="textoRunning"> <!--div do html-->
-                <h1 class="descricao">Faça chuva</h1>
-                <h1 class="descricao">ou sol.</h1> <!--título do html-->
-                <p1 class="p1">sempre entrego meu</p1> <!--parágrafo do html-->
-                <p2 class="p2">melhor. </p2> <!--parágrafo do html-->
-        </cardRunning>
+        <card1 class="card1">
+            <box1Running class="box1Running"> <!--div do html-->
+                <textoRunning class="textoRunning"> <!--div do html-->
+                    <h1 class="descricao1">Faça chuva</h1>
+                    <h1 class="descricao1">ou sol.</h1> <!--título do html-->
+                    <p1 class="p1">sempre entrego meu</p1> <!--parágrafo do html-->
+                    <p2 class="p2">melhor. </p2> <!--parágrafo do html-->
+                </textoRunning>
+            </box1Running>
+            <img src="running.png" alt="running" class="imgRunning"> <!--imagem do html-->
+
+        </card1>
         <cardExperiencia class="experiencia"> <!--div do html-->
             
         </cardExperiencia>
